--- a/templates/automationReport.html
+++ b/templates/automationReport.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
+{% include 'commonHeadPart.html' %}
+
 <body>
-<h1>Automation report.</h1>
-{{report[0]}}<br>
-{{report[1]}}
-</body>
-</html>
+
+{% include 'header.html' %}
+
+<section>
+    <h1 class="heading">Automation report.</h1>
+    <p>{{report[0]}}</p><br>
+    <p>{{report[1]}}</p><br>
+    <a href="{{ url_for('index')}}" class="btn-1">Go Back</a>
+</section>
+
+{% include 'footer.html' %}
