--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
+{% include 'commonHeadPart.html' %}
+
 <body>
 
-<h1>This is an automated system for checking IPO allotments.</h1>
+{% include 'header.html' %}
 
-<form method="post" action="/automationReport">
-    <label>Email: </label><input type="email" placeholder="Please enter your email" name="email"><br>
-    <sub>This email address would be used to send you alert related to new ipo allotments.</sub><br><br>
+<section class="subscribe-form" id="subscribe-form" style="text-align: center;">
+    <h1 class="heading">Welcome to <span>New IPO Alert</span> system.</h1>
 
-    <label>Depository Participants (DP): </label><input type="number" placeholder="12345" pattern="^\d{5}$" name="Depository Participants"><br>
-    <label>Username: </label><input type="number" placeholder="12345678" pattern="^\d{8}$" name="Username"><br>
-    <label>Password: </label><input type="password" name="password"><br>
+    <img class="thumbnail" src="../static/img/ipo_alert.gif" alt="New IPO Alert - Nepse">
 
+    <form method="post" action="/automationReport">
 
+        <div class="input-box">
+            <input type="email" placeholder="Please enter your email" name="email" required>
+        </div>
 
-    <button type="submit">Check now</button>
-</form>
+        <div class="input-box">
+            <input type="number" placeholder="Depository Participants (DP): 12345" pattern="^\d{5}$" name="Depository Participants" required>
+        </div>
 
-</body>
-</html>
+        <div class="input-box">
+            <input type="number" placeholder="Username: 12345678" pattern="^\d{8}$" name="Username" required>
+        </div>
+
+        <div class="input-box">
+            <input type="password" placeholder="Password" name="password" required>
+        </div>
+
+        <input type="submit" value="Check now" class="btn-1">
+    </form>
+</section>
+
+{% include 'footer.html' %}
