--- a/templates/commonHeadPart.html
+++ b/templates/commonHeadPart.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCDSS69H64"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DCDSS69H64');
+    </script>
+
     <title>{{title}}</title>
 
     <meta charset="UTF-8">
