--- a/templates/header.html
+++ b/templates/header.html
@@ -10,5 +10,5 @@
         <a href="https://dhirajdhungana.com#contact" class="contact-navItem">Contact Me</a>
     </nav>
 
-    <a href="#contact" class="contact">Contact Me</a>
+    <a href="https://dhirajdhungana.com#contact" class="contact">Contact Me</a>
 </header>
